fix(campaign) Larger vertical spacing between campaigns on desktop

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -266,7 +266,7 @@ h2:after {
 }
 
 #campaign-section .campaign-box {
-    margin-bottom: 35px;
+    margin-bottom: 80px;
     flex-basis: unset;
 }
 
